test_src/compiler_errors/types/binary/RightShiftFloatError2.b
class RightShiftFloatError2 {
    void test() {
        println(42 >> 14.0);
    }
}
